  See fem/estimators.hpp.

- Added a new class FaceQuadratureSpace that allows for the construction of
  QuadratureFunctions on the interior or boundary faces of a mesh.

- Added a class CoefficientVector for efficient access of variable coefficient
  values at quadrature points (in particular for GPU/device kernels).

Linear and nonlinear solvers
----------------------------

- Added a new class DGMassInverse that performs a local elementwise CG
  iteration to solve systems involving the discontinuous Galerkin mass matrix,
  including support for device/GPU acceleration.

New and updated examples and miniapps
-------------------------------------
- Added a new elasticity miniapp, Hooke, that showcases a low-level approach of
  using MFEM to solve a nonlinear elasticity problem based on the fundamental
  finite element operator decomposition. The miniapp also integrates with
  automatic differentiation tools like a native dual number implementation or a
  third party library such as Enzyme. See miniapps/elasticity for more details.

- Add a new example code, Example 33/33p, to demonstrate the solution of
  spectral fractional PDEs with MFEM.

Integrations, testing and documentation
---------------------------------------
- Added a Dockerfile for a simple MFEM container, see config/docker/README.md.

- Added support for ParMoonolith, https://bitbucket.org/zulianp/par_moonolith,
  which provides parallel non-conforming, non-matching, variational, volumetric
  mesh information transfer. With ParMortarAssember, fields can be exchanged
  between arbitrarily distributed and unrelated finite element meshes in a
  variationally consistent way.

- Added support for the LLVM-based automatic differentiation tool Enzyme, see
  https://github.com/EnzymeAD/Enzyme. Build system flags and a convenience
  header are provided. The functionality and interaction are demonstrated in a
  new miniapp in miniapps/elasticity.
